style.css
a {
    text-decoration: none;
    color: blue;
}

a:hover {
    text-decoration: underline;
}

body {
    max-width: 35em;
    margin: 0 auto;
    padding: 0 1em;
    font-family: Arial, sans-serif;
    line-height: 1.2;
}

footer {
    border-top: 0.08em solid black;
}

header {
    border-bottom: 0.08em solid black;
}

pre {
    overflow-x: auto;
}

pre, blockquote {
    padding-left: 3em;
    margin: 0;
}

.title {
    font-size: 1.8em;
    line-height: 1em;
}

h1 {
    font-size: 1.2em;
}

@media (prefers-color-scheme: dark) {
    body { 
        background: black;
        color: white;
    }

    a {
        color: #6bf;
    }

    a:hover {
        text-decoration: underline;
    }

    h1 {
        border-bottom: 0.08em solid white;
    }

    footer {
        border-top: 0.08em solid white;
    }
}

